--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.93",
+    "@swc/jest": "^0.2.29",
+    "@types/jest": "^29.5.5",
+    "jest": "^29.7.0",
+    "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
     "typescript": "^5.2.2"
   }
