--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "@types/uuid": "^9.0.6",
+    "uuid": "^9.0.1"
   }
 }
