--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "npm run tsc -- --noEmit && jest",
+    "test:cov": "npm run tsc -- --noEmit && jest --collect-coverage",
     "tsc": "tsc"
   },
   "keywords": ["ddd", "typescript"],
